...
            "state" : "translated",
            "value" : "清除搜索"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar"
          }
...
      }
    },
    "Connected" : {
      "comment" : "A banner that appears when the Supabase backend",
      "isCommentAutoGenerated" : true
    },
    "Continue" : {
      "comment" : "A button title that lets the user continue without",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "动作类型"
          }
        }
      }
    },
    "Exercises" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ejercicios"
          }
...
            "state" : "translated",
            "value" : "暂停"
          }
        }
      }
    },
    "Pause session" : {
      "comment" : "A button that pauses a session.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "预设日程"
          }
        }
      }
    },
    "Previous exercise" : {
      "comment" : "A button that triggers the app to skip to the previous exercise.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "隐私政策"
          }
        }
      }
    },
    "Profile" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
          }
...
            "state" : "translated",
            "value" : "收藏喜欢的练习，保持连续记录，赢取徽章。"
          }
        }
      }
    },
    "Search exercises" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar ejercicios"
          }
...
            "state" : "translated",
            "value" : "跳过"
          }
        }
      }
    },
    "Skip exercise" : {
      "comment" : "A button that skips to the next exercise.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "暂时跳过"
          }
        }
      }
    },
    "Start" : {
      "comment" : "A button that starts a session.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
